Replace spring-petclinic by spring-petclinic-rest. Also:  - Download and install crac-criu into jdk/lib such that we can use a custom CRaC build.  - Create different AppCDS archives for fat, shaded and thin spring-petclinic bundles.  - The project now more or less depends on the fact that we use at least JDK 21.    This means that the default CRAC_JDK (which is still JDK 17) will not work    and we'll have to specify a JDK 21+ with '-j <jdk>' when running 'makeRootFS.sh'.